dockerfile plugins update